fix product grid spacing

--- a/wp-content/themes/known_starter/src/sass/partials/_woocommerce.scss
+++ b/wp-content/themes/known_starter/src/sass/partials/_woocommerce.scss
@@ -276,8 +276,8 @@
     transition: all 500ms ease;
     width: auto;
     @media(min-width: 768px) {
-      flex: 0 0 30%;
-      max-width: 30%;
+      flex: 0 0 33.33%;
+      max-width: 33.33%;
     }
 
     &:hover {
